{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 38,
  "lineage": "84432b96-13a2-65e9-7885-195cd802e048",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09bc618212c4e753b",
            "arn": "arn:aws:ec2:ap-south-1:586019819588:elastic-ip/eipalloc-09bc618212c4e753b",
            "domain": "vpc",
            "id": "eipalloc-09bc618212c4e753b",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-65-0-9-241.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.9.241",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0967f94acbcc01e63",
            "arn": "arn:aws:ec2:ap-south-1:586019819588:elastic-ip/eipalloc-0967f94acbcc01e63",
            "domain": "vpc",
            "id": "eipalloc-0967f94acbcc01e63",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-206-17-116.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.206.17.116",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:586019819588:internet-gateway/igw-06d5280aa7de2c32a",
            "id": "igw-06d5280aa7de2c32a",
            "owner_id": "586019819588",
            "region": "ap-south-1",
            "tags": {
              "Name": "my-app-igw"
            },
            "tags_all": {
              "Name": "my-app-igw"
            },
            "vpc_id": "vpc-0c338297fb74a0b2c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main-public-nat-gateway-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09bc618212c4e753b",
            "association_id": "eipassoc-0f723f50e0b4f3780",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-058339678c38964cf",
            "network_interface_id": "eni-07deb32125a7175a5",
            "private_ip": "101.0.1.106",
            "public_ip": "65.0.9.241",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cedc9a9b4ddb9412",
            "tags": {
              "Name": "my-app-public-nat-gateway-a"
            },
            "tags_all": {
              "Name": "my-app-public-nat-gateway-a"
            },
            "vpc_id": "vpc-0c338297fb74a0b2c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat-a",
            "aws_subnet.main-public-subnet-a",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main-public-nat-gateway-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0967f94acbcc01e63",
            "association_id": "eipassoc-091a2291260a2df60",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-05f00a898b808b7be",
            "network_interface_id": "eni-02bcf39f9991ab702",
            "private_ip": "101.0.3.22",
            "public_ip": "13.206.17.116",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08a8f0d5f09e8cf88",
            "tags": {
              "Name": "my-app-public-nat-gateway-b"
            },
            "tags_all": {
              "Name": "my-app-public-nat-gateway-b"
            },
            "vpc_id": "vpc-0c338297fb74a0b2c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat-b",
            "aws_subnet.main-public-subnet-b",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-private-route-table-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:586019819588:route-table/rtb-02de76f9927b0e4a3",
            "id": "rtb-02de76f9927b0e4a3",
            "owner_id": "586019819588",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-058339678c38964cf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-app-private-route-table-a"
            },
            "tags_all": {
              "Name": "my-app-private-route-table-a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c338297fb74a0b2c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "586019819588",
            "id": "rtb-02de76f9927b0e4a3",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat-a",
            "aws_nat_gateway.main-public-nat-gateway-a",
            "aws_subnet.main-public-subnet-a",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-private-route-table-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:586019819588:route-table/rtb-03cf4349a381b8920",
            "id": "rtb-03cf4349a381b8920",
            "owner_id": "586019819588",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05f00a898b808b7be",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-app-private-route-table-b"
            },
            "tags_all": {
              "Name": "my-app-private-route-table-b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c338297fb74a0b2c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "586019819588",
            "id": "rtb-03cf4349a381b8920",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat-b",
            "aws_nat_gateway.main-public-nat-gateway-b",
            "aws_subnet.main-public-subnet-b",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:586019819588:route-table/rtb-0e71e415257be342b",
            "id": "rtb-0e71e415257be342b",
            "owner_id": "586019819588",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06d5280aa7de2c32a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-app-public-route-table"
            },
            "tags_all": {
              "Name": "my-app-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c338297fb74a0b2c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "586019819588",
            "id": "rtb-0e71e415257be342b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-private-route-table-association-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012e54fadf15c56f8",
            "region": "ap-south-1",
            "route_table_id": "rtb-02de76f9927b0e4a3",
            "subnet_id": "subnet-0756fa5f0d19b3a23"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat-a",
            "aws_nat_gateway.main-public-nat-gateway-a",
            "aws_route_table.main-private-route-table-a",
            "aws_subnet.main-private-data-subnet-a",
            "aws_subnet.main-private-subnet-a",
            "aws_subnet.main-public-subnet-a",
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0466b0aa0c2e56ba2",
            "region": "ap-south-1",
            "route_table_id": "rtb-02de76f9927b0e4a3",
            "subnet_id": "subnet-09a64583954ac8c9e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat-a",
            "aws_nat_gateway.main-public-nat-gateway-a",
            "aws_route_table.main-private-route-table-a",
            "aws_subnet.main-private-data-subnet-a",
            "aws_subnet.main-private-subnet-a",
            "aws_subnet.main-public-subnet-a",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-private-route-table-association-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0205dcdd70fb0aec8",
            "region": "ap-south-1",
            "route_table_id": "rtb-03cf4349a381b8920",
            "subnet_id": "subnet-0f0ae6b9c468c78b9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat-b",
            "aws_nat_gateway.main-public-nat-gateway-b",
            "aws_route_table.main-private-route-table-b",
            "aws_subnet.main-private-data-subnet-b",
            "aws_subnet.main-private-subnet-b",
            "aws_subnet.main-public-subnet-b",
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b253178bda26cf73",
            "region": "ap-south-1",
            "route_table_id": "rtb-03cf4349a381b8920",
            "subnet_id": "subnet-01571f50621c16717"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat-b",
            "aws_nat_gateway.main-public-nat-gateway-b",
            "aws_route_table.main-private-route-table-b",
            "aws_subnet.main-private-data-subnet-b",
            "aws_subnet.main-private-subnet-b",
            "aws_subnet.main-public-subnet-b",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-route-table-association-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c890583e4665a255",
            "region": "ap-south-1",
            "route_table_id": "rtb-0e71e415257be342b",
            "subnet_id": "subnet-0cedc9a9b4ddb9412"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main-public-route-table",
            "aws_subnet.main-public-subnet-a",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-route-table-association-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d0550963b6b6865",
            "region": "ap-south-1",
            "route_table_id": "rtb-0e71e415257be342b",
            "subnet_id": "subnet-08a8f0d5f09e8cf88"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main-public-route-table",
            "aws_subnet.main-public-subnet-b",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-data-subnet-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:586019819588:subnet/subnet-09a64583954ac8c9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "101.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a64583954ac8c9e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "586019819588",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "my-app-private-data-subnet-a"
            },
            "tags_all": {
              "Name": "my-app-private-data-subnet-a"
            },
            "vpc_id": "vpc-0c338297fb74a0b2c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "586019819588",
            "id": "subnet-09a64583954ac8c9e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-data-subnet-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:586019819588:subnet/subnet-01571f50621c16717",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "101.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01571f50621c16717",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "586019819588",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "my-app-private-data-subnet-b"
            },
            "tags_all": {
              "Name": "my-app-private-data-subnet-b"
            },
            "vpc_id": "vpc-0c338297fb74a0b2c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "586019819588",
            "id": "subnet-01571f50621c16717",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-subnet-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:586019819588:subnet/subnet-0756fa5f0d19b3a23",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "101.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0756fa5f0d19b3a23",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "586019819588",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "my-app-private-subnet-a"
            },
            "tags_all": {
              "Name": "my-app-private-subnet-a"
            },
            "vpc_id": "vpc-0c338297fb74a0b2c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "586019819588",
            "id": "subnet-0756fa5f0d19b3a23",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-subnet-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:586019819588:subnet/subnet-0f0ae6b9c468c78b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "101.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0ae6b9c468c78b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "586019819588",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "my-app-private-subnet-b"
            },
            "tags_all": {
              "Name": "my-app-private-subnet-b"
            },
            "vpc_id": "vpc-0c338297fb74a0b2c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "586019819588",
            "id": "subnet-0f0ae6b9c468c78b9",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-subnet-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:586019819588:subnet/subnet-0cedc9a9b4ddb9412",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "101.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cedc9a9b4ddb9412",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "586019819588",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "my-app-public-subnet-a"
            },
            "tags_all": {
              "Name": "my-app-public-subnet-a"
            },
            "vpc_id": "vpc-0c338297fb74a0b2c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "586019819588",
            "id": "subnet-0cedc9a9b4ddb9412",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-subnet-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:586019819588:subnet/subnet-08a8f0d5f09e8cf88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "101.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a8f0d5f09e8cf88",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "586019819588",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "my-app-public-subnet-b"
            },
            "tags_all": {
              "Name": "my-app-public-subnet-b"
            },
            "vpc_id": "vpc-0c338297fb74a0b2c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "586019819588",
            "id": "subnet-08a8f0d5f09e8cf88",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:586019819588:vpc/vpc-0c338297fb74a0b2c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "101.0.0.0/16",
            "default_network_acl_id": "acl-02a8b6a9b143a681e",
            "default_route_table_id": "rtb-0a0ce075ed372e104",
            "default_security_group_id": "sg-09cdfacc7be981d4c",
            "dhcp_options_id": "dopt-0876b728140cdd4c4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c338297fb74a0b2c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a0ce075ed372e104",
            "owner_id": "586019819588",
            "region": "ap-south-1",
            "tags": {
              "Name": "my-app-vpc"
            },
            "tags_all": {
              "Name": "my-app-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "586019819588",
            "id": "vpc-0c338297fb74a0b2c",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}